--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Open+Sans&family=Poppins:ital@1&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+header {
+  text-align: center;
+  margin-top: 20px;
+}
+header > h1 {
+  font-family: "Cedarville Cursive", cursive;
+  font-size: 64px;
+  text-shadow: 1px 1px 10px crimson;
 }
 
 body {
@@ -22,10 +34,21 @@ body {
   border: 1px solid black;
 }
 
-.clear {
+.buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+button {
   font-size: 16px;
   padding: 5px 35px;
-  display: block;
-  margin: 100px auto;
   box-shadow: 0 0 5px black;
+  margin-top: 20px;
+  border: 0;
+  border-radius: 8px;
+}
+
+button:hover {
+  cursor: pointer;
 }
