--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
 
 button {
   font-size: 16px;
-  padding: 5px 35px;
+  padding: 10px 25px;
   box-shadow: 0 0 5px black;
   margin-top: 20px;
   border: 0;
@@ -51,4 +51,5 @@ button {
 
 button:hover {
   cursor: pointer;
+  background-color: lightgrey;
 }
