--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,6 @@ body {
   background-color: darkgrey;
   box-shadow: 0 0 10px black;
   transform: scale(2);
-}
-
-.square {
   border: 1px solid black;
 }
 
@@ -43,6 +40,7 @@ body {
 button {
   font-size: 16px;
   padding: 10px 25px;
+  width: 170px;
   box-shadow: 0 0 5px black;
   margin-top: 20px;
   border: 0;
