--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,11 @@ button:hover {
   cursor: pointer;
   background-color: lightgrey;
 }
+
+input {
+  margin-top: 5px;
+}
+
+#slider {
+  margin-top: 20px;
+}
